--- a/src/Components/Styles/Login.css
+++ b/src/Components/Styles/Login.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f0f0f0;
+    background-color: #82beef;
   }
   
   .login-heading {
@@ -18,7 +18,7 @@
     padding: 20px;
     border-radius: 5px;
     background-color: #fff;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 1px 1px 2px 2px rgb(77, 76, 76);
   }
   
   .login-form-group {
@@ -33,7 +33,7 @@
   }
   
   .login-input {
-    width: 100%;
+    width: 250px;
     padding: 10px;
     border-radius: 4px;
     border: 1px solid #ccc;
@@ -41,16 +41,42 @@
   }
   
   .login-button {
-    width: 100%;
+    width: 100px;
     padding: 10px;
     background-color: #007bff;
     color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    font-weight: bold;
+    transition: box-shadow 0.5s ease;
+  }
+
+  .login-button:hover{
+    box-shadow: 1px 1px 3px 3px rgb(77, 76, 76);
   }
   
   .login-error {
-    color: red;
+    text-align: center;
     margin-bottom: 10px;
+  }
+
+  .password-input-container{
+    display: flex;
+    gap: 5px;
+    align-items: center;
+  }
+
+  .password-input-container .password-toggle-button{
+    background: transparent;
+    border: none;
+    cursor: pointer;
+  }
+
+  .log-but{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    align-items: center ;
+    flex-direction: column;
   }
