--- a/src/Components/Styles/SideBar.css
+++ b/src/Components/Styles/SideBar.css
@@ -5,7 +5,7 @@
     gap: 40px;
     background-color: #ffff;
     box-shadow: 1px 1px 2px 2px gray;
-    height: 80vh;
+    height: 100vh;
     width: 250px;
 }
 
@@ -29,7 +29,7 @@
     border-radius: 20px;
 }
 
-.archived{
+.sign{
     display: flex;
     align-items: center;
     gap: 30px;
@@ -39,7 +39,22 @@
     border-radius: 20px;
 }
 
-.archived:hover{
+.sign:hover{
+    background-color: #82beef;
+    border-radius: 20px;
+}
+
+.logout{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    cursor: pointer;
+    padding: 8px;
+    transition:   background-color 0.3s ease;
+    border-radius: 20px;
+}
+
+.logout:hover{
     background-color: #82beef;
     border-radius: 20px;
 }
