--- a/src/Components/Styles/SignUp.css
+++ b/src/Components/Styles/SignUp.css
@@ -1,12 +1,22 @@
+.signup-page{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #82beef;
+}
+
 .signup-container {
     width: 300px;
     margin: 50px auto;
     padding: 20px;
-    border: 1px solid #ddd;
+    border: none;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
+    box-shadow: 1px 1px 2px 2px rgb(77, 76, 76);
+    background-color: #fff;
+}
+
   .signup-container div {
     margin-bottom: 15px;
   }
@@ -17,7 +27,7 @@
   }
   
   input {
-    width: 100%;
+    width: 250px;
     padding: 8px;
     margin-top: 5px;
     border-radius: 5px;
@@ -25,13 +35,19 @@
   }
   
   #register {
-    width: 100%;
+    width: 100px;
     padding: 10px;
     background-color: #28a745;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-weight: bold;
+    transition: box-shadow 0.5s ease;
+  }
+
+  #register:hover{
+    box-shadow: 1px 1px 3px 3px rgb(77, 76, 76);
   }
 
   .error-message {
@@ -40,4 +56,24 @@
   
   .success-message {
     color: green;
+  }
+
+  .password-input-container{
+    display: flex;
+    gap: 5px;
+    align-items: center;
+  }
+
+  .password-input-container .password-toggle-button{
+    background: transparent;
+    border: none;
+    cursor: pointer;
+  }
+
+  .sig-but{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
   }
